Provide a realpower command

Allows getting results such as root(-8, 1/3)=-2, with root(-8,1/3) we
get the complex root which is less fun to work with.

BUG: 402637